# fastapi-auth

./: .env.example  README.md  fastapi_auth.db  pyproject.toml
app/: main.py  security.py
app/api/: deps.py
app/api/routers/: auth.py  users.py
app/core/: config.py
app/db/: base.py  crud.py  models.py
app/schemas/: user.py
scripts/: bootstrap.py
